k8s_api/k8s_templates/authors-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
  template:
    metadata:
      labels:
        app: authors
    spec:
      containers:
        - name: authors-pod
          image: sagivn/authorsapi:latest
          ports:
            - containerPort: 8000
