k8s_api/k8s_templates/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: authors-pod
          image: sagivn/booksapi:latest
          ports:
            - containerPort: 8001
