k8s_api/k8s_templates/authors_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-service
spec:
  type: ClusterIP
  selector: 
    app: authors
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
