k8s_api/k8s_templates/books_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  type: ClusterIP
  selector: 
    app: books
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
