k8s_api/k8s_templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: authors-service
            port:
              number: 8000
      - path: /authors
        pathType: Prefix
        backend:
          service:
            name: authors-service
            port:
              number: 8000
      - path: /books
        pathType: Exact
        backend:
          service:
            name: books-service
            port:
              number: 8001
      - path: /books/
        pathType: Prefix
        backend:
          service:
            name: books-service
            port:
              number: 8001
